--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,7 @@
     "stylelint-config-recess-order": "4.0.0",
     "stylelint-config-standard": "33.0.0",
     "stylelint-order": "6.0.3",
-    "vite": "4.3.2"
+    "vite": "4.3.2",
+    "vite-plugin-svgr": "3.2.0"
   }
 }
